<resources>
    <string name="app_name">Maleta Virtual</string>
    <string name="email_input">Ingrese el correo:</string>
    <string name="password_input">Ingresa la contraseña:</string>
    <string name="register_question_boton">¿no tienes cuenta? Registrate!!</string>
    <string name="titulo_login">Inicia sesión y alista tu maleta!!</string>
    <string name="login_button">Ingresar</string>
    <string name="register_button">Registrarse</string>
    <string name="cancel_button">Cancelar</string>
    <string name="register_title">Registrate en Maleta Virtual</string>
    <string name="name_input">Ingrese su nombre:</string>
    <string name="repeat_password_input">Repita la contraseña:</string>
    <string name="password_hint">contraseña</string>
    <string name="email_hint">Correo</string>
    <string name="name_hint">Ingrese su nombre</string>
    <string name="repassword_hint">Repita su contraseña</string>
    <string name="reg_pass_hint">Su contraseña debe tener 6 o más caracteres</string>
    <string name="newBag_title">Crea tu nueva maleta de viaje</string>
    <string name="newbag_decription">Ingrese el nombre de la maleta: </string>
    <string name="newbag_buton">Crear Maleta</string>
    <string name="changeName_buton_dialog">Cambiar Nombre</string>
    <string name="delete_buton_dialog">Eliminar</string>
    <string name="ediText_dialog_hint">Ingresa el nuevo nombre...</string>
    <string name="add_item">Agregar articulo</string>
    <string name="add_item_tittle">Agrega un articulo a tu mochila</string>
    <string name="choose_item">Escoje entre los articulos disponibles o crea uno nuevo</string>
    <string name="create_cat_title">Crea una categoria nueva</string>
    <string name="create_cat_button">Crear categoria</string>
    <string name="create_cat_name_title">Dale un nombre a la nueva categoria:</string>
    <string name="create_item_title">Creación de articulos</string>
    <string name="create_item_name_description">Nombra el articulo</string>
    <string name="choose_item_cat">Escoge una categoria o crea una nueva</string>
    <string name="create_item_button">Crear Articulo</string>
    <string name="choose_cat_description">escogfsdf</string>
    <string name="quantity_items_bags">Cuantos Articulos llevaras: </string>
    <string name="update_dialog">Actualizar</string>
    <string name="bag_item_dialog_title">¿Cuantos Articulos llevaras?</string>
    <string name="bag_item_dialog_decription">Cantidad de articulos:</string>
    <string name="group_bags_title">Lista maletas del grupo</string>
    <string name="CU_title">Crear Grupo</string>
    <string name="CU_description">Nombra el grupo y comparte el nombre para agregar más viajeros a tu grupo</string>
    <string name="CU_et_hint">Nombra el grupo!!</string>
    <string name="CU_et_hint1">Nombre del grupo</string>
    <string name="CU_description2">Usa tu correo para agregar a más viajeros</string>
    <string name="CU_subtitle">O... Unete a un grupo</string>
    <string name="CU_description3">Ingresa el nombre de un grupo para unirte</string>
    <string name="CU_buton1">Crear Grupo</string>
    <string name="CU_button2">Unirse al grupo</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>