<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF6FA"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="4dp"
        android:paddingBottom="5sp"
        android:text="@string/titulo_login"
        android:textAlignment="center"
        android:textColor="#1B5688"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="#00FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.26">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_input"
            android:textColor="#2B2525"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/correo_ingreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#656565"
            android:textColorHint="#453636" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_input"
            android:textColor="#2B2525"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/contrasena_ingreso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#656565"
            android:textColorHint="#453636" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/m_o_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mostrar Contraseña"
            android:textColor="#255C6C"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-0-"
            android:textAlignment="center"
            android:textColor="#2B2525"
            android:textSize="20sp" />

        <Button
            android:id="@+id/botonRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#007A2020"
            android:text="@string/register_question_boton"
            android:textColor="#2196F3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="95dp" />

        <Button
            android:id="@+id/botonIngreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E38117"
            android:text="@string/login_button"
            android:textColor="#2196F3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>